--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon src\\app.js",
     "devbabel": "nodemon src\\app.js --exec babel-node",
-    "start": ".\\node_modules\\nodemon\\bin\\nodemon.js src\\app.js --exec 'node run lint && node'",
+    "start": "babel-node src\\app.js --exec ",
     "lint": ".\\node_modules\\.bin\\eslint **\\*.js"
   },
   "keywords": [],
