--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon src\\app.js",
     "devbabel": "nodemon src\\app.js --exec babel-node",
-    "start": "nodemon src\\app.js --exec babel-node",
+    "start": "babel-node src\\app.js --exec ",
     "lint": ".\\node_modules\\.bin\\eslint **\\*.js"
   },
   "keywords": [],
